Add support for colours and typefaces

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
         "function-call-argument-newline": [
             "error",
             "consistent"
-        ]
+        ],
+        "semi": 1
     }
 }
